# fh3_GAI4_course

./: .gitignore  README.md  main.py  pyproject.toml
HW_1/: 00_PrepData.html  00_PrepData.ipynb  01_TrainModel.html  01_TrainModel.ipynb  02_Evaluation.html  02_Evaluation.ipynb  HW1_Report.md  README.md  history_pretrained.csv  history_scratch.csv  pyproject.toml
HW_1_sol/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Evaluation.ipynb
HW_2/: .gitignore  00_PrepData.html  00_PrepData.ipynb  01_DeepEnsemble_OOD.html  01_DeepEnsemble_OOD.ipynb  02_Autoencoder_OOD.html  02_Autoencoder_OOD.ipynb  HW2_Report.md  README.md  pyproject.toml
HW_2_sol/: 00_PrepData.ipynb  01_DeepEnsemble_OOD.ipynb  02_Autoencoder_OOD.ipynb
Unit_0/: 00_Check_Environment.ipynb  01_Check_Data.ipynb  README.md
Unit_1/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_Inference.ipynb  05_TrainModel_EarlyStop.ipynb
Unit_2/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_MC_Dropout.ipynb  03_DeepEnsemble_vs_MCDropout.ipynb
Unit_3/: 00_PrepData.ipynb  01_DenoisingAutoencoder.ipynb  02_AnomalyDetection.ipynb  README.md  pyproject.toml
Unit_4/: 00_FC_Autoencoder_2D.ipynb  01_FC_Autoencoder_3D.ipynb  02_VAE_2D.ipynb  03_VAE_3D.ipynb  04_LatentWalk_VAE.ipynb  05_LatentWalk_AE.ipynb  README.md  latents_ae_2d.npz  latents_ae_3d.npz  pyproject.toml
